scaffolding copy management endpoints
